Updated and Remove the change URL button and text issue#1

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SENTRY_DSN=
 CHATWOOT_WEBSITE_TOKEN=
-CHATWOOT_BASE_URL=https://app.chatwoot.com
+CHATWOOT_BASE_URL=https://chat.onehash.ai
 JUNE_SDK_KEY=
 MINIMUM_CHATWOOT_VERSION=2.16.0
