--- a/ios/Chatwoot/Chatwoot.entitlements
+++ b/ios/Chatwoot/Chatwoot.entitlements
@@ -7,7 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:staging.chatwoot.com</string>
-		<string>applinks:app.chatwoot.com</string>
+		<string>applinks:chat.onehash.ai</string>
 	</array>
 </dict>
 </plist>
