--- a/ios/Chatwoot/Info.plist
+++ b/ios/Chatwoot/Info.plist
@@ -28,7 +28,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>applinks:app.chatwoot.com</key>
+			<key>applinks:chat.onehash.ai</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
